Version 1.6.6 - NEW_NAME
-----------------------------
 - #3777 Documentation Error: redirect_url plugin
 - #3923 Adminlog download, tab separator single quoted
 - #3926 Little typo in stylesheet.
 - #3935 Validation error in stylesheet 'Accessibility and cross-browser tools'
 - #4002 menu parameter start_level='2' don't show results.
 - Fix problem with showinmenu for separators.
 - Fix error pages being able to be set inactive in listcontent.
 - Fix error in permissions checking for copying content.
 - Fixes issues with the PDF output only working of the pdf flag was turned OFF
 - Submit is not taken on forms, when .htaccess is used and page_extension = ''.

 
Version 1.6.5 - Poya
-----------------------------
- Fixes a problem with bulk deletion of pages that have inactive children.
- Fixes many problems with ability to get content objects
- Fixes the CreateFormStart method to reliably get the page url.
- Fixes problem with pretty urls (internal or mod_rewrite) and GET parameters on the URL.
- Printing
  - Fixes problem with stylesheet not being found if pretty urls were being used
  - Fixes problem with parsing the URL to print.
- News
  - Fixes trivial issue with editing an article that had expiry dates set.
- MenuManager
  - Fixes problem with having a default database template
  - Fixes problem with being able to delete the default database template.
- TinyMCE
  - Fixed bug disabling the wysiwyg togglebox upon saving the basic toolbar profile
  - Fixed bug with truncated menutexts with quotes in them not getting properly escaped, breaking config
  - Updated to latest TinyMCE 3.2.6


Version 1.6.4 - Moindou
-----------------------------
- Fixes a problem with the showinmenu option not being available to other content types
- Fixes a problem with the lang stuff and a required reference operator
- Fixes a problem with checksum verification and generation
- Fixes a problem in filemanager where access time was shown and not creation time.